fixed footer overlap

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,9 +4,14 @@
     font-size: 62.5%;
 }
 
+
+/* Set body background to a gradient based on emotionally relaxing colourscheme, 
+with transparency to prevent user distraction from quiz */
+
 body {
     display: flex;
     min-height: 100vh;
+    min-width: 100px;
     flex-direction: column;
     background: rgba(253, 187, 45, 0.5);
     background: -moz-linear-gradient(45deg, rgba(253, 187, 45, 0.5) 0%, rgba(34, 193, 195, 0.5) 8%, rgba(214, 218, 175, 0.5) 24%, rgba(214, 218, 175, 0.5) 71%, rgba(34, 193, 195, 0.5) 92%, rgba(253, 187, 45, 0.5) 100%);
@@ -29,10 +34,6 @@ header {
     height: 80px;
     margin: 10px;
 }
-
-
-/* Set body background to a gradient based on emotionally relaxing colourscheme, 
-with transparency to prevent user distraction from quiz */
 
 
 /* Default style settings */
@@ -117,6 +118,7 @@ h3.intro-text {
     text-decoration: none;
     color: rgb(236, 236, 236);
     background: rgb(11, 76, 79);
+    max-width: 30rem;
     width: 30rem;
     padding: 1rem;
     margin-bottom: 1rem;
@@ -281,12 +283,12 @@ footer {
     font-size: 1.2rem;
     width: 100%;
     left: 0;
-    position: absolute;
     bottom: 0;
     display: block;
     text-align: center;
     overflow: hidden;
     box-sizing: border-box;
+    padding-bottom: 1px;
 }
 
 
